k8s/fleetwood/k8s/02_lb/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: it-issuer
  name: it-ingress
  namespace: it
spec:
  ingressClassName: nginx
  rules:
    - host: languagetool.cummings-online.ca
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: languagetool
                port:
                  number: 8010
  tls:
    - secretName: languagetool-tls
      hosts:
        - languagetool.cummings-online.ca
